Revert "🔀 PR: Usuarios with validtions and enums configs"