@@ -1,9 +1,8 @@
 package com.sigclc.backend.Usuarios;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Component;
 
 import com.sigclc.backend.Usuarios.DTOs.UsuarioCreateDTO;
 import com.sigclc.backend.Usuarios.DTOs.UsuarioResponseDTO;
@@ -11,9 +10,6 @@ import com.sigclc.backend.Usuarios.DTOs.UsuarioUpdateDTO;
 import com.sigclc.backend.Usuarios.Models.UsuariosModel;
 import com.sigclc.backend.Usuarios.Models.UsuariosModel.LibroPropuesto;
 import com.sigclc.backend.Usuarios.Models.UsuariosModel.Votacion;
-
-import org.bson.types.ObjectId;
-import org.springframework.stereotype.Component;
 
 @Component
 public class Mapper {
@@ -25,14 +21,15 @@ public class Mapper {
         if (dto == null) return null;
 
         UsuariosModel model = new UsuariosModel();
+        // _id lo genera MongoDB
         model.setNombre(dto.getNombre());
         model.setApellido(dto.getApellido());
         model.setEmail(dto.getEmail());
         model.setRol(dto.getRol());
-        model.setTelefono(dto.getTelefono());
-        model.setEdad(dto.getEdad());
+        model.setTelefono(dto.getTelefono()); // Long
+        model.setEdad(dto.getEdad());         // Long
         model.setOcupacion(dto.getOcupacion());
-        model.setLibroPropuesto(new ArrayList<>());
+        // listas embebidas se inicializan en el constructor del model (o aquí si lo prefieres)
         return model;
     }
 
@@ -43,7 +40,7 @@ public class Mapper {
         if (model == null) return null;
 
         UsuarioResponseDTO dto = new UsuarioResponseDTO();
-        dto.setId(model.getId() != null ? model.getId().toHexString() : null);
+        dto.setId(model.getIdAsString());
         dto.setNombre(model.getNombre());
         dto.setApellido(model.getApellido());
         dto.setEmail(model.getEmail());
@@ -52,27 +49,26 @@ public class Mapper {
         dto.setEdad(model.getEdad());
         dto.setOcupacion(model.getOcupacion());
 
-        List<LibroPropuesto> propuestas = model.getLibroPropuesto();
-        if (propuestas != null && !propuestas.isEmpty()) {
-            dto.setLibroPropuesto(
-                propuestas.stream()
-                         .filter(Objects::nonNull)
-                         .map(this::toLibroPropuestoDTO)
-                         .collect(Collectors.toList())
-            );
-        } else {
-            dto.setLibroPropuesto(List.of());
-        }
-
+        // Propuestas embebidas
+        dto.setLibroPropuesto(
+        model.getLibroPropuesto()
+        .stream()
+        .map(this::toLibroPropuestoDTO) 
+        .toList()
+        );
         return dto;
     }
 
+        
+
+    /* ==========================================
+     *  List<Model>  ->  List<ResponseDTO>
+     * ========================================== */
     public List<UsuarioResponseDTO> toResponseDTOList(List<UsuariosModel> models) {
-        if (models == null || models.isEmpty()) return List.of();
-        return models.stream()
-                     .filter(Objects::nonNull)
-                     .map(this::toResponseDTO)
-                     .collect(Collectors.toList());
+        return models == null ? List.of()
+                              : models.stream()
+                              .map(this::toResponseDTO)
+                              .toList();
     }
 
     /* =========================
@@ -83,10 +79,12 @@ public class Mapper {
 
         if (dto.getNombre()    != null) model.setNombre(dto.getNombre());
         if (dto.getApellido()  != null) model.setApellido(dto.getApellido());
+        if (dto.getEmail()     != null) model.setEmail(dto.getEmail());
+        if (dto.getRol()       != null) model.setRol(dto.getRol());
         if (dto.getTelefono()  != null) model.setTelefono(dto.getTelefono());
         if (dto.getEdad()      != null) model.setEdad(dto.getEdad());
         if (dto.getOcupacion() != null) model.setOcupacion(dto.getOcupacion());
-        // Email/rol fuera de PATCH por política actual.
+        // Las propuestas y votaciones se gestionan por métodos específicos del Service.
     }
 
     /* =========================
@@ -99,16 +97,13 @@ public class Mapper {
         dto.setEstado(lp.getEstado());
         dto.setLibroId(lp.getLibroId() != null ? lp.getLibroId().toHexString() : null);
 
-        List<Votacion> votos = lp.getVotaciones();
-        if (votos != null && !votos.isEmpty()) {
+        if (lp.getVotaciones() != null) {
             dto.setVotaciones(
-                votos.stream()
-                     .filter(Objects::nonNull)
-                     .map(this::toVotacionDTO)
-                     .collect(Collectors.toList())
+                lp.getVotaciones()
+                  .stream()
+                  .map(this::toVotacionDTO)
+                  .toList()
             );
-        } else {
-            dto.setVotaciones(List.of());
         }
         return dto;
     }
@@ -117,18 +112,9 @@ public class Mapper {
         if (v == null) return null;
 
         UsuarioResponseDTO.VotacionDTO dto = new UsuarioResponseDTO.VotacionDTO();
-        dto.setVoto(v.getVoto());
-        dto.setFechaVoto(v.getFechaVoto());
+        dto.setVoto(v.getVoto());                // "Si" | "No" (String en el Model)
+        dto.setFechaVoto(v.getFechaVoto());      // Date en el Model (si lo dejaste como Date)
         dto.setUsuarioId(v.getUsuarioId() != null ? v.getUsuarioId().toHexString() : null);
         return dto;
-    }
-
-    /** Utilidad opcional: convierte String a ObjectId o retorna null (útil en Services). */
-    public ObjectId toObjectIdOrNull(String hex) {
-        try {
-            return (hex == null || hex.isBlank()) ? null : new ObjectId(hex);
-        } catch (IllegalArgumentException e) {
-            return null;
-        }
     }
 }
